--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('/img/home-img.jpg') no-repeat; /* aquí se cambia la imagen de Home*/
+    background: url('/img/dron.jpg') no-repeat; /* aquí se cambia la imagen de Home*/
     background-size: cover;
     background-position: center;
     
@@ -310,8 +310,8 @@ span {
 }
 
 .about-img img {
-    width: 100%;
-    height:90%;
+    width: 90%;
+    height: 90%;
     border-radius: 50%;
     border: .2rem solid var(--main-color);
 }
@@ -324,10 +324,10 @@ span {
    width: 100%;
    height: 100%;
    border-radius: 50%;
-   border-top: .2rem solid var(--second-bg-color);
-   border-bottom: .2rem solid var(--second-bg-color);
-   border-left: .2rem solid var(--main-color);
-   border-right: .2rem solid var(--main-color);
+   border-top: .3rem solid var(--second-bg-color);
+   border-bottom: .3rem solid var(--second-bg-color);
+   border-left: .3rem solid var(--main-color);
+   border-right: .3rem solid var(--main-color);
    animation: aboutSpinner 8s linear infinite;
 }
 
@@ -362,6 +362,22 @@ span {
 .reproductor {
     width: 1000px;
     
+}
+
+/* Seccion para galary-video*/
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.grid-item {
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid black; /* Bordes para cada cuadro */
+    height: 200px; /* Altura de los cuadros */
 }
 
 /* Section Contact*/
